FIX:Overflow removed in sponsor page

--- a/src/Components/Sponsor/Sponsor.module.scss
+++ b/src/Components/Sponsor/Sponsor.module.scss
@@ -164,4 +164,14 @@
   #frightD {
     opacity: 1;
   }
+  .sponsorContainer {
+    .frame {
+      #top {
+        top: 7%;
+      }
+      #bottom {
+        top: 93%;
+      }
+    }
+  }
 }
